--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ layout: default
 
 {% include experiences.html %}
 
-{% include projects.html %}
+{% include education.html %}
 
-{% include publications.html %}
 
 {% include skills.html %}
