--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+layout: spanish
+layout: english
 ---
 
 {% include career-profile.html %}
@@ -13,3 +15,4 @@ layout: default
 {% include projects.html %}
 
 {% include skills.html %}
+
