--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@ layout: default
 {% include skills.html %}
 
 
+{% for item in site.translations[site.lang].my_nested_yaml_collection %}
+    <p>{{ item[0] }} -> {{ item[1] }}</p>
+{% endfor %}
