--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 {% include skills.html %}
 
+{{ site.lang }}
 
-{% for item in site.translations[site.lang].my_nested_yaml_collection %}
-    <p>{{ item[0] }} -> {{ item[1] }}</p>
-{% endfor %}
+
+{{ site.baseurl_root }}
