--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: default
 
 {% include skills.html %}
 
-{% for lang in site.languages %}
+{% for lang in languages %}
   <p>{% tl about {{ lang }} %}</p>
 {% endfor %}
+
